--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "@inertiajs/inertia-react": "^0.5.12",
         "@types/react": "^17.0.6",
         "react": "^17.0.2",
-        "react-dom": "^17.0.2"
+        "react-dom": "^17.0.2",
+        "uninstall": "0.0.0"
     }
 }
