--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
         "laravel-mix": "^6.0.19",
         "lodash": "^4.17.19",
         "postcss": "^8.1.14",
+        "resolve-url-loader": "^3.1.3",
+        "sass": "^1.34.0",
+        "sass-loader": "^11.1.1",
         "ts-loader": "^8.3.0",
         "typescript": "^4.2.4"
     },
